# remule

./: .bazelrc  .gitignore  Cargo.nix  Cargo.toml  README.md  WORKSPACE.bazel  default.nix  direct.nix  flake.nix  flake2.nix
cargo/: crates.bzl
cargo/remote/: BUILD.ahash-0.7.6.bazel  BUILD.ansi_term-0.11.0.bazel  BUILD.async-attributes-1.1.2.bazel  BUILD.async-channel-1.6.1.bazel  BUILD.async-executor-1.4.1.bazel  BUILD.async-global-executor-2.0.2.bazel  BUILD.async-io-1.6.0.bazel  BUILD.async-lock-2.4.0.bazel  BUILD.async-mutex-1.4.0.bazel  BUILD.async-process-1.3.0.bazel  BUILD.async-std-1.10.0.bazel  BUILD.async-task-4.0.3.bazel  BUILD.atoi-0.4.0.bazel  BUILD.atomic-waker-1.0.0.bazel  BUILD.atty-0.2.14.bazel  BUILD.block-buffer-0.9.0.bazel  BUILD.blocking-1.1.0.bazel  BUILD.byteorder-1.4.3.bazel  BUILD.cache-padded-1.1.1.bazel  BUILD.clap-2.33.3.bazel  BUILD.concurrent-queue-1.2.2.bazel  BUILD.cpufeatures-0.2.1.bazel  BUILD.crc-2.1.0.bazel  BUILD.crc-catalog-1.1.1.bazel  BUILD.crossbeam-queue-0.3.2.bazel  BUILD.crossbeam-utils-0.8.5.bazel  BUILD.crypto-mac-0.11.1.bazel  BUILD.ctor-0.1.21.bazel  BUILD.dirs-3.0.2.bazel  BUILD.dirs-sys-0.3.6.bazel  BUILD.dotenv-0.15.0.bazel  BUILD.enum-primitive-derive-0.2.2.bazel  BUILD.event-listener-2.5.1.bazel  BUILD.fastrand-1.5.0.bazel  BUILD.fmt-extra-0.2.1.bazel  BUILD.futures-intrusive-0.4.0.bazel  BUILD.futures-io-0.3.17.bazel  BUILD.futures-lite-1.12.0.bazel  BUILD.futures-sink-0.3.17.bazel  BUILD.futures-util-0.3.17.bazel  (+57 more)
collect-peers/: BUILD.bazel  Cargo.toml
collect-peers/src/: main.rs
emule-proto/: BUILD.bazel  Cargo.toml
emule-proto/src/: clientcredit.rs  emule_proto.rs  known2.rs  nodes.rs  udp_proto.rs
emule-proto/tests/: nodes_dat.rs  udp_proto.rs
emule-proto/tests/nodes-dat/: 1  2  3  emule_0_50a_normal
kad/: BUILD.bazel  Cargo.toml
kad/src/: main.rs
plots/: packed-vs-unpacked  peers-per-host
remule-db/: BUILD.bazel  Cargo.toml
remule-db/src/: main.rs
src/: clientcredit.rs  known2.rs  lib.rs  nodes.rs  udp_proto.rs
