[package]
name = "remule"
version = "0.1.0"
authors = ["Cody Schafer <dev@codyps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
fmt-extra = "0.2.1"
plain = "0.2.3"
async-std = { version = "1.9.0", features = ["attributes"]}
num-traits = "0.2.14"
enum-primitive-derive = "0.2.1"