[package]
name = "remule"
version = "0.1.0"
authors = ["Cody Schafer <dev@codyps.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
fmt-extra = "0.2.1"
async-std = { version = "1.9.0", features = ["attributes", "unstable"]}
plain = "0.2.3"
num-traits = "0.2"
enum-primitive-derive = "0.2.1"
md5 = "0.7"
arc4 = "0.1"
futures = "0.3.4"
rand = "0.8.2"
[dev-dependencies]
hex-literal = "0.3.1"