load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test", "rust_binary")

rust_binary(
    name = "collect-peers",
    edition = "2021",
    aliases = aliases(),
    srcs = glob(["src/**/*.rs"]),
    deps = all_crate_deps(
        normal = True,
    ) + ['//emule-proto:emule-proto'],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
)
