[package]
name = "collect-peers"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "*"
either = "*"
emule-proto = { version = "*", path = "../emule-proto" }
fmt-extra = "0.2.1"
futures = "*"
humantime = "*"
rand = "0.8.2"
sqlx = { version = "*", features = [ "runtime-tokio-rustls", "sqlite", "any", "postgres"] }
structopt = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = { version = "*", features = [ "env-filter" ] }

#[[bin]]
#name = "collect_peers"
#path = "src/main.rs"
