[package]
name = "collect-peers"
version = "0.1.0"
edition = "2021"

[dependencies]
either = "1"
emule-proto = { version = "*", path = "../emule-proto" }
fmt-extra = "0.2.1"
futures = "0.3"
humantime = "2"
rand = "0.10"
clap = { version = "4", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "sqlite", "any", "postgres"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }
anyhow = "*"
